[package]
name = "test_http_https_proxy"
version = "0.1.0"
authors = ["drivextech <drivextech@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = '~0.13'
#tiny_http = { version = '~0.7', features = ["ssl"] }
tiny_http = { version = '~0.7', features = [] }